// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zod > transformations > toLowerCase 1`] = `
{
  "a": "abar   ",
  "help": false,
}
`;

exports[`zod > transformations > toUpperCase 1`] = `
{
  "a": "ABAR   ",
  "help": false,
}
`;

exports[`zod > transformations > trim 1`] = `
{
  "a": "abar",
  "help": false,
}
`;

exports[`zod > validation > cuid 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid cuid]
`;

exports[`zod > validation > cuid2 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid cuid2]
`;

exports[`zod > validation > datetime 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid ISO datetime]
`;

exports[`zod > validation > datetime no offset 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid ISO datetime]
`;

exports[`zod > validation > datetime precision 1 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid ISO datetime]
`;

exports[`zod > validation > email 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid email address]
`;

exports[`zod > validation > emoji 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid emoji]
`;

exports[`zod > validation > endsWith 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid string: must end with "x"]
`;

exports[`zod > validation > includes 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid string: must include "z"]
`;

exports[`zod > validation > length 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Too big: expected string to have <=1 characters]
`;

exports[`zod > validation > max 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Too big: expected string to have <=1 characters]
`;

exports[`zod > validation > min 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Too small: expected string to have >=5 characters]
`;

exports[`zod > validation > regex 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid string: must match pattern /[a-z]+/]
`;

exports[`zod > validation > startsWith 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid string: must start with "y"]
`;

exports[`zod > validation > ulid 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid ULID]
`;

exports[`zod > validation > url 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid URL]
`;

exports[`zod > validation > uuid 1`] = `
[ErrorInvalidArgument: Invalid argument for parameter: "a". The error was:
Invalid UUID]
`;
